Added: Perl Cgi

--- a/Website/greetings.html
+++ b/Website/greetings.html
@@ -15,7 +15,7 @@
 			<p class="col-lg-10 fs-4">Below is an example form built entirely with Bootstraps form controls. </p>
 		  </div>
 		  <div class="col-md-10 mx-auto col-lg-5">
-			<form class="p-4 p-md-5 border rounded-3 bg-body-tertiary" method="get" action="./cgi-bin/greetings.py" >
+			<form class="p-4 p-md-5 border rounded-3 bg-body-tertiary" method="get" action="./cgi-bin/greetings.cgi" >
 			  <div class="form-floating mb-3">
 				<input type="text" class="form-control" id="floatingName" placeholder="Name" name="username" required>
 				<label for="floatingName">Name</label>
