--- a/Website/index.html
+++ b/Website/index.html
@@ -47,5 +47,8 @@
 		  </div>
 		</div>
 	  </div>
-</body>
+
+	  <form action="cgi-bin/hello.cgi" method="get">
+		<button type="submit" class="btn btn-info m-5">Hello from Perl CGI</button>
+	  </form></body>
 </html>
