--- a/Website/upload/index.html
+++ b/Website/upload/index.html
@@ -11,7 +11,7 @@
 	<div class="px-4 py-5 my-5 text-center">
 		<h1 class="display-5 fw-bold text-body-emphasis">Upload a File</h1>
 		<div class="col-lg-6 mx-auto">
-			<form action="../cgi-bin/upload_file.py" method="post" enctype="multipart/form-data">
+			<form action="../cgi-bin/upload_file.cgi" method="post" enctype="multipart/form-data">
 				<div class="m-3">
 					<input type="file" class="form-control" id="file" name="filename">
 				</div>
