--- a/Website/login.html
+++ b/Website/login.html
@@ -19,7 +19,7 @@
 <body>
 
 	<div class="container col-xl-10 col-xxl-8 px-4 py-5">
-		<form method="post" action="./cgi-bin/login.py">
+		<form method="post" action="./cgi-bin/login.cgi">
 			<h1 class="h3 m-3 fw-normal">Please sign in</h1>
 			<div class="form-floating m-3">
 				<input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" name="email" required>
